1999-09-09  Gordon Matzigkeit  <gord@fig.org>

	* docs/grub.texi (Commands): Synchronize descriptions with
	builtins.c.

	* stage2/builtins.c (hide_func): Use set_partition_hidden_flag.
	(unhide_func): Likewise.
	Many help message cleanups.  From Pavel Roskin.

	* stage2/shared.h (set_partition_hidden_flag): Declare.

	* stage2/disk_io.c (set_partition_hidden_flag): New function
	merged from hide_partition and unhide_partition.  Make sure we OR
	with the inverse of the flag bit rather than XORing to unhide the
	partition.

1999-09-10  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* grub/asmstub.c (_FILE_OFFSET_BITS): Defined.
	(biosdisk) [!__linux__]: Pass the offset argument as off_t
	instead of int to lseek, and compare the return value with
	OFFSET. Reported by Pavel Roskin.
	(grub_stage2) [!__linux__ && !__GNU__]: Print a warning message.

1999-09-08  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/stage2.c (run_menu): If run_script is successfully
	finished, break the loop. Reported by Pavel Roskin.
	Do not wait an input character when FALLBACK_ENTRY is less than
	zero.
	* stage2/cmdline.c (run_script): If ERRNUM is non-zero, wait an
	input character, whether FALLBACK is less than zero or not.

1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (configfile_func): New function.
	(builtin_configfile): New variable.
	(builtin_table): Added the pointer to BUILTIN_CONFIGFILE.

1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin:
	* stage2/asm.S [!STAGE1_5] (chain_stage2): Deleted.
	[STAGE1_5] (get_code_end): Likewise.
	* stage2/char_io.c (grub_strncat): Likewise.
	* stage2/common.c [STAGE1_5] (saved_mem_upper): Likewise.
	* stage2/smp-imps.c (imps_release_cpus): Likewise.
	(imps_any_new_apics): Made static.
	(imps_enabled): Likewise.
	(imps_num_cpus): Likewise.
	(imps_lapic_addr): Likewise.
	(imps_cpu_apic_map): Likewise.
	(imps_apic_cpu_map): Likewise.
